# RsMarkdown2PDF-Service

./: .buckconfig  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .watchmanconfig  Cargo.toml  README.md  concept.md  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml
.gitlab/: pipeline.yaml
.gitlab/docker/: Dockerfile
.gitlab/scripts/: before-script.sh  upload-images.sh
.nvim/: nvim.lua
api/: .env  Cargo.toml  Dockerfile  Rocket.toml  justfile  run-with-reload.sh
api/migrations/2023-11-04-151206_create_jobs/: up.sql
api/src/: database.rs  files.rs  main.rs  messages.rs
buck/nix/: BUILD  flake.nix  update.sh
buck/prelude-nix/: .buckconfig  prelude.bzl
components/api/: .env  .env.tmpl  Cargo.toml  Tiltfile  diesel.toml  justfile  test.json
components/api/docker/: Dockerfile  Dockerfile.dockerignore
components/api/src/: handlers.rs  main.rs  messages.rs  persist.rs  state.rs
components/api/src/db-migration/: main.rs
components/api/src/db-migration/migrations/2023-11-04-151206_create_jobs/: down.sql  up.sql
components/api/src/handlers/: mod.rs
components/api/src/service/: consumer.rs  handlers.rs  main.rs  messages.rs  persist.rs  schema.rs
components/api/src/state/: mod.rs
components/common/: Cargo.toml  justfile
components/converter/: .env  .env.tmpl  Cargo.toml  Tiltfile  justfile
components/web/: Cargo.toml  Tiltfile  justfile
docs/: architecture.md
docs/devops/: README.md
docs/tools/: lint-docs.sh
k8s/: Tiltfile  deploy.sh
k8s/api/: configmap.yaml
k8s/postgres/: deployment.yaml  postgres-configmap.yaml  volume.yaml
k8s/rabbitmq/: rbac.yaml  services.yaml
manifests/: .env.tmpl  .env.yaml  .env.yaml.tmpl  Tiltfile
manifests/.tilt/: Tiltfile
manifests/api/: configmap.yaml  deployment.yaml  service.yaml
manifests/common/: Tiltfile  (+1 more)
markdown-to-pdf/: Cargo.toml  Dockerfile  justfile
markdown-to-pdf/src/: main.rs
protocol/: Cargo.toml  README.md
scripts/: sample.md  upload-markdown.sh
tests/: Dockerfile  Dockerfile2
tools/: build-component.sh  check-correct-nix-install.sh  create-gitlab-runner.sh  format-rust.sh  format.sh  general.sh  lint-rust.sh  lint.sh  run-components-parallel.sh  start-gitlab-runner-docker.sh  start-gitlab-runner-podman.sh  start-gitlab-runner.sh
web/: justfile
(+106 files in other folders)
