[package]
name = "api"
version = "0.1.0"
edition = "2021"


[dependencies.protocol]
path = "../protocol"

[dependencies]
diesel_migrations = "2.1.0"
dotenvy = "0.15"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ['json']

[dependencies.serde]
version = "1.0"
features = ['derive']

[dependencies.diesel]
version = "2.1.0"
features = ["postgres"]

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",
    "serde"
]

[dependencies.amqprs]
version = "1.5"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
