[package]
name = "markdown-to-pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
tokio = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.amqprs]
version = "1.5"
features = ['urispec']


[dependencies.protocol]
path = "../protocol"




[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.