[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
dotenvy = "0.15"
slog = "2.7.0"
amqprs = "1.5.1"
uuid = "1.6.1"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ['json']

[dependencies.serde]
version = "1.0"
features = ['derive']

[dependencies.diesel]
version = "2.1.0"
features = ["postgres"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.

[features]
default = ["debug-handlers"]
debug-handlers = []
